    (Closes: #900775)
  * sysvrc-init script for munin-httpd: fixed path of executable
  * simplify init script for munin (rrdcached) via "init-d-script"
  * simplify init script for munin-httpd via "init-d-script"
  * simplify init script for munin-async via "init-d-script"
  * simplify init script for munin-node via "init-d-script"

 -- Lars Kruse <devel@sumpfralle.de>  Mon, 30 Apr 2018 02:29:38 +0200

munin (2.999.7-2) experimental; urgency=medium

  * d/control:
  - switch packaging to salsa.debian.org. Thanks to the alioth admins for
      providing such a nice service so long!

 -- Holger Levsen <holger@debian.org>  Wed, 30 May 2018 23:47:21 +0000

munin (2.999.7-1) experimental; urgency=medium

  * New upstream beta release:
    - drop debug_sincos from munin-plugins-extra.
  * munin-plugis-core: add suggests to time. Closes: #862794
  * Switch maintainer address to team+munin@tracker.debian.org.
  * Drop Tom Feiner, Steve Schnepp and Matthias Schmitz from Uploaders, thanks
    for all your work, Tom, Steve & Matthias!
  * Bump Standards-Version: to 4.1.4, no changes needed.
  * debian/changelog: drop trailing whitespaces, thanks lintian.

 -- Holger Levsen <holger@debian.org>  Sat, 07 Apr 2018 16:45:48 +0000

munin (2.999.6-6) experimental; urgency=medium

  * debian/control:
    - switch Git-Vcs: to https and specify -b debian-experimental.
    - Bump Standards-Version to 4.1.3.
  * debian/munin-node.triggers: use explicit interest-await triggers for
    perl-major-upgrades and for munin-node.
  * debian/munin-plugins-*.triggers: use explicit activate-await triggers for
    to activate the munin-node trigger.

 -- Holger Levsen <holger@debian.org>  Sat, 06 Jan 2018 21:48:02 +0000

munin (2.999.6-5) experimental; urgency=medium

  * Add systemd-sysv as alternate dependency to cron | cron-daemon. Thanks to
    Christian Göttsche for the suggestion! (Closes: #877658)
  * Fixup too long changelog line in previous version, thanks lintian.